# rs100

./: 1  Cargo.toml  test.rest
fixtures/: blake3.txt  ed25519.pk  ed25519.sk  index.html
src/: lib.rs  main.rs  utils.rs
src/cli/: base64.rs  genpass.rs  http.rs  mod.rs  text.rs
src/process/: http_serve.rs  mod.rs  text.rs
